# yapsy-example

./: README.md  pyproject.toml
src/: TextProcessorPlugin.py  main.py
src/plugins/: UpperCasePlugin.py  UpperCasePlugin.yapsy-plugin
