[tool.poetry]
name = "python-plugins"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_plugins"}]

[tool.poetry.dependencies]
python = "^3.10"
yapsy = "^1.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
ipython = "^8.14.0"
isort = "^5.12.0"
autopep8 = "^2.0.2"


[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 120
force_alphabetical_sort = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
